vscode mac 15042022 / Perceptron de uma camada / parte II

--- a/2. Perceptron de uma camada.ipynb
+++ b/2. Perceptron de uma camada.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -12,7 +12,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,20 +24,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "entradas = [1, 7, 5]\n",
-    "pesos = [0.8, 0.1, 0]"
+    "pesos = [0.8, 0.1, 0] # pesos ou 'sinapses'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def soma(entradas, pesos):\n",
+    "    soma = 0\n",
+    "    for i in range(len(entradas)):\n",
+    "        # print(entradas[1])\n",
+    "        # print(pesos[i])\n",
+    "        soma += entradas[i] * pesos[i]\n",
+    "    return soma\n",
+    "somaFinal = int(soma(entradas, pesos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "somaFinal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stepFunction(somaFinal): # função degrau\n",
+    "    if (somaFinal>=1):\n",
+    "        return 1\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado = stepFunction(somaFinal)\n",
+    "resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Alterando o primeiro valor da entrada para negativo\n",
+    "entradas = [-1, 7, 5]\n",
+    "somaFinal = int(soma(entradas, pesos))\n",
+    "resultado = stepFunction(somaFinal)\n",
+    "resultado\n",
+    "\n",
+    "# O resultado espelha a natureza da função: ou é tudo (1), ou é nada (0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Usando o numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entradas = np.array([1, 7, 5])\n",
+    "pesos = np.array([0.8, 0.1, 0]) # pesos ou 'sinapses'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def soma(entradas, pesos):\n",
+    "    return entradas.dot(pesos) # dot: produto escalar\n",
+    "\n",
+    "somaFinal = int(soma(entradas, pesos))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado = stepFunction(somaFinal)\n",
+    "resultado"
+   ]
   }
  ],
  "metadata": {
