--- a/5. Redes neurais multicamadas.ipynb
+++ b/5. Redes neurais multicamadas.ipynb
@@ -25,8 +25,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = sigmoide(-1.5)\n",
-    "b = np.exp(0)"
+    "# a = sigmoide(-1.5)\n",
+    "# b = np.exp(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "entradas = np.array([[0,0], [0,1], [1, 0], [1, 1]])\n",
+    "\n",
+    "saidas = np.array([[0], [1], [1], [0]])\n",
+    "\n",
+    "pesos0 = np.array([[-0.424, -0.740, -0.961],\n",
+    "                 [0.359, -0.577, -0.469]])\n",
+    "\n",
+    "peso1 = np.array([[-0.017], [-0.893], [0.148]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epocas = 100\n",
+    "\n",
+    "for j in range(epocas):\n",
+    "    camadaEntrada = entradas\n",
+    "    somaSinapse0 = np.dot(camadaEntrada, pesos0) # soma entre produtos das camada de entrada e oculta (pesos0)\n",
+    "    camadaOculta = sigmoide(somaSinapse0)\n"
    ]
   }
  ],
