--- a/5. Redes neurais multicamadas.ipynb
+++ b/5. Redes neurais multicamadas.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,12 @@
     "pesos0 = np.array([[-0.424, -0.740, -0.961],\n",
     "                 [0.359, -0.577, -0.469]])\n",
     "\n",
-    "peso1 = np.array([[-0.017], [-0.893], [0.148]])"
+    "pesos1 = np.array([[-0.017], [-0.893], [0.148]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,10 @@
     "for j in range(epocas):\n",
     "    camadaEntrada = entradas\n",
     "    somaSinapse0 = np.dot(camadaEntrada, pesos0) # soma entre produtos das camada de entrada e oculta (pesos0)\n",
-    "    camadaOculta = sigmoide(somaSinapse0)\n"
+    "    camadaOculta = sigmoide(somaSinapse0)\n",
+    "\n",
+    "    somaSinapses1 = np.dot(camadaOculta, pesos1)\n",
+    "    camadaSaida = sigmoide(somaSinapses1)\n"
    ]
   }
  ],
