vscode mac 18042022 / Perceptron multicamadas / erros

--- a/5. Redes neurais multicamadas.ipynb
+++ b/5. Redes neurais multicamadas.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,10 @@
     "    camadaOculta = sigmoide(somaSinapse0)\n",
     "\n",
     "    somaSinapses1 = np.dot(camadaOculta, pesos1)\n",
-    "    camadaSaida = sigmoide(somaSinapses1)\n"
+    "    camadaSaida = sigmoide(somaSinapses1)\n",
+    "\n",
+    "    erroCamadaSaida = saidas - camadaSaida\n",
+    "    mediaAbsoluta = np.mean(np.abs(erroCamadaSaida))\n"
    ]
   }
  ],
